# vibecoding-projects

./: .gitignore  .importlinter.domain  .importlinter.simple  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Justfile  Project.md  pyproject.toml
.claude/commands/: hybrid-apply.md  hybrid-archive.md  hybrid-continue.md  hybrid-explore.md  hybrid-ff.md  hybrid-new.md  hybrid-status.md  hybrid-verify.md  hybrid-workflow.md  sdd-apply.md  sdd-continue.md  sdd-new.md  sdd-status.md
.cursor/rules/: openspec.md
openspec/: config.yaml
openspec/schemas/hybrid-workflow/: schema.yaml
