# pyproject.toml (template)
#
# 约定：
# - 使用 `src/` 布局
# - 用 `uv` 作为依赖与运行入口
# - Ruff 负责 format + lint
# - mypy 负责类型门禁
# - pytest 负责测试门禁（可选 coverage 门禁）
#
# 使用前请把 `<pkg>` 替换为你的包名（例如 `app`）。

[project]
name = "my-fastapi-service"
version = "0.1.0"
description = "FastAPI service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
]

[project.optional-dependencies]
db-local = [
  "aiosqlite>=0.20",
]
db-postgres = [
  "asyncpg>=0.29",
]
dev = [
  "ruff>=0.4",
  "mypy>=1.9",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pre-commit>=3.7",
  "import-linter>=2.0",
  "schemathesis>=3.0",
  "respx>=0.21",
  "responses>=0.25",
  "httpx>=0.27",
  "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/<pkg>"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["<pkg>"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
files = ["src/<pkg>"]
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
markers = [
  "contract: API and external-service contract checks",
  "integration: integration tests",
]

[tool.coverage.run]
source = ["src/<pkg>"]
branch = true

[tool.coverage.report]
skip_covered = true
show_missing = true
